# FlyCaptureDemo

./: CGetVideo.cpp  CGetVideo.h  CMakeLists.txt  PtGreyVideoCapture.cpp  PtGreyVideoCapture.h  SingleCameraCaptureEx.cpp  SingleCameraCaptureEx.h  VideoCaptureInterFace.cpp  VideoCaptureInterFace.h  main.cpp
